...
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_photo_imgSrc"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_photo_id_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="12dp"
        android:text="---"
...
        app:layout_constraintStart_toStartOf="@+id/tv_photo_id"
        app:layout_constraintTop_toBottomOf="@+id/tv_photo_id"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/tv_photo_camera_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="12dp"
        android:text="---"
...
